Added instructions for building a docker image